RESOLVED FIXED116628
[WK2] Crashes in NetworkProcess due to incorrect private browsing session tracking
https://bugs.webkit.org/show_bug.cgi?id=116628
Summary [WK2] Crashes in NetworkProcess due to incorrect private browsing session tra...
Alexey Proskuryakov
Reported 2013-05-22 12:35:20 PDT
There are multiple issues in NetworkProcess private browsing session tracking: 1. We don't initialize privateBrowsingEnabled parameter when creating the process. 2. When exiting private browsing, there is a good chance that NetworkProcess would learn about this while there are still requests in flight that have the private browsing bit enabled, and it will crash when trying to use the just-deleted private browsing session.
Attachments
proposed fix (8.20 KB, patch)
2013-05-22 12:45 PDT, Alexey Proskuryakov
beidson: review+
Alexey Proskuryakov
Comment 1 2013-05-22 12:45:53 PDT
Created attachment 202615 [details] proposed fix
Brady Eidson
Comment 2 2013-05-22 13:39:59 PDT
Comment on attachment 202615 [details] proposed fix View in context: https://bugs.webkit.org/attachment.cgi?id=202615&action=review Seems fine. Please clean up some of the comments. > Source/WebKit2/ChangeLog:19 > + means that it will be harder to spot logic errors with using a wrong session. when* using a wrong session? > Source/WebKit2/UIProcess/WebContext.cpp:378 > + // If private browsing if enabled through preferences but not re-enabled, NetworkProcess will crash. This sentence has grammar errors, and I don't understand what it's trying to say.
Alexey Proskuryakov
Comment 3 2013-05-22 13:50:36 PDT
Alexey Proskuryakov
Comment 4 2013-05-22 14:06:24 PDT
Note You need to log in before you can comment on or make changes to this bug.